@@ -11,6 +11,7 @@ New features:
  - [ZBXNEXT-511] renamed item description to name, for description introduced a new field (asaveljevs, Vedmak)
 
 Bug fixes:
+ - [ZBX-3724] fixed broken images when importing and exporting maps with PostgreSQL (Alexei, Vedmak, Sasha)
  - [ZBX-3794] added timeout support to vfs.file.contents[] command (dimir)
  - [ZBX-3809] fixed overwriting of existing elements and links when importing a map (Alexei)
  - [ZBX-954] typo in constant name, cause error when try to clear item history (Vedmak)
